# zenn-program

./: README.md
src/external_podman/: build.sh  down.sh  up.sh
src/external_podman/ssh-client/: ContainerFile
src/external_podman/ssh-client/src/: redirect.c
src/podman/: README.md
src/podman/client/: ContainerFile  id_rsa
src/podman/docker-compose/: docker-compose.yaml  down.sh  up.sh
src/podman/docker-compose2/: connect.sh  docker-compose.yaml  down.sh  up.sh
src/podman/server/: ContainerFile  id_rsa.pub
src/py/: rock_paper_scissors.py  rock_paper_scissors_chatgpt3_5.py  rock_paper_scissors_chatgpt4.py  rock_paper_scissors_many.py  rock_paper_scissors_table.py
src/rust/build_container/: Cargo.toml  build.sh
src/rust/build_container/src/: main.rs
src/rust/google_drive_study/: .editorconfig  .gitignore  Cargo.toml  README.md
src/rust/google_drive_study/google_drive/: Cargo.toml
src/rust/google_drive_study/google_drive/src/: lib.rs
src/rust/google_drive_study/src/: main.rs
src/rust/multi_terminal1/: Cargo.toml  README.md
src/rust/multi_terminal1/src/: main.rs
src/rust/study/askama_sample/: Cargo.toml  README.md  askama.toml
src/rust/study/csv_sample/: .rustfmt.toml  Cargo.toml  README.md  weight_data.csv
src/rust/study/err/: .editorconfig  Cargo.toml  (+1 more)
src/rust/unzip/: Cargo.toml  README.md
src/rust/unzip/src/: main.rs
src/spresense/camera/: README.md  start.sh
src/spresense/hello/: README.md  build_image.sh  start.sh
src/spresense/message/: README.md
src/spresense/multi_thread/: .editorconfig  .gitignore  spresense_info
(+62 files in other folders)
